--- a/client/package.json
+++ b/client/package.json
@@ -65,5 +65,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12"
   },
-  "proxy": "http://localhost:5038"
+  "proxy": "https://backend-v1-one.vercel.app"
 }
