--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://rsfireprotections:rsfireprotections123@rsfireprotections.7wtaa.mongodb.net/rsfire_hyd?retryWrites=true&w=majority&appName=RSFIREPROTECTIONS
-PORT=
+CORS_ORIGIN=https://rsfire-crm-erp-client-v1-0.vercel.app
+PORT=5038
